# movefmt

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md  movefmt.toml
.cargo/: config.toml
.github/workflows/: format-check.yml
doc/: ChangeLog.md  FUNCTIONAL_FORMATTER_README.md  ReleaseProcess.md  cross_compile_and_test_en.md  cross_compile_and_test_zh.md  how_to_use.md  how_to_use_part2.md  log-240428-1.txt  log-240428-2.txt  log-240428-3.txt  log-240428-4.txt  log-240428-5.txt  log-240428-6.txt  movefmt_impl_en.md  movefmt_impl_zh.md  src_core_diff-2.txt  src_core_diff-3.txt  src_core_diff-4.txt  src_core_diff-5.txt  src_core_diff.txt  testcase_description_en.md  testcase_description_zh.md
doc/scripts/: generate_pretty_commits.sh
editors/code/: README.md  language-configuration.json  package-lock.json  package.json
editors/code/src/: configuration.ts  context.ts  main.ts  reg.ts
src/: context.rs  fmt.rs  fmt_test.rs  ide_test.rs  item.rs  lib.rs  lsp_fmt.rs  movefmt_diff.rs  project.rs  project_context.rs  project_visitor.rs  scope.rs  syntax.rs  token_tree.rs  types.rs  utils.rs
src/app/: lsp_fmt.rs  mod.rs
src/comment_fmt/: Cargo.toml
src/comment_fmt/config_proc_macro/: Cargo.toml
src/comment_fmt/config_proc_macro/src/: lib.rs
src/comment_fmt/src/: comment.rs  lib.rs  shape.rs  string.rs  utils.rs
src/comment_fmt/src/config/: config_type.rs  file_lines.rs  mod.rs  options.rs
src/configurations/: Cargo.toml
src/configurations/config_proc_macro/: Cargo.toml
src/configurations/src/: lib.rs
src/core/: fmt.rs  fmt_state.rs  mod.rs  token_tree.rs
src/syntax_fmt/: big_block_fmt.rs  bin_op_fmt.rs  branch_fmt.rs  call_fmt.rs  comment_fmt.rs  expr_fmt.rs  fun_fmt.rs  let_fmt.rs  mod.rs  quant_fmt.rs  skip_fmt.rs  spec_fmt.rs  syntax_extractor.rs  syntax_handler.rs  syntax_trait.rs  use_fmt.rs
src/tools/: mod.rs  movefmt_diff.rs  syntax.rs  utils.rs
tests/: fmt_test.rs
tests/aptos_framework_case/: DiemAccount.fmt.move  MultiToken.fmt.move  PaymentScripts.fmt.move  PaymentScripts.move  Simple.fmt.move  account.fmt.move  aggregator.fmt.move  aptos_hash.fmt.move  aptos_hash.move  bit_vector.fmt.move  coin.fmt.move  coin.spec.fmt.move  coin.spec1.move  coin.spec2.move  coin.spec3.move  coin1.move  features.spce.fmt.move  mutual_inst.fmt.move  mutual_inst.move  randomness.fmt.move  smart_vector_test.fmt.move  vector_tests.fmt.move
tests/break_line/: input1.fmt.move  input1.move  input2.fmt.move  input2.move  input3.fmt.move  input4.fmt.move
tests/bug/: input1.fmt.move  input1.move  input2.fmt.move  input2.move  input3.fmt.move  input3.move  input4.fmt.move  input4.move  input5.fmt.move  input5.move  input6.fmt.move  input6.move  input7.fmt.move  input7.move  input8.fmt.move  input8.move  input9.fmt.move  input9.move
tests/bug/issue37/: input1.fmt.move  input1.move
tests/bug2/issue41/: input1.fmt.move  input1.move
tests/bug2/issue42/: input1.fmt.move  input1.move  input2.fmt.move  input2.move
tests/bug2/issue43/: input1.fmt.move  input1.move
tests/bug2/issue47/: input.fmt.move  input1.move
tests/bug2/issue48/: input1.fmt.move  input1.move
tests/bug2/issue49/: input1.fmt.move  input1.move
tests/bug2/issue76/: input1.fmt.move  input1.move
tests/bug2/issue79/: input1.fmt.move  input1.move
tests/comment/: input1.fmt.move  input1.move  input2.fmt.move  input2.move  input3.fmt.move  input3.move
tests/complex/: input1.fmt.move  input1.fmt.out1  input2.fmt.move  input3.fmt.move  input4.fmt.move  input5.fmt.move  input6.fmt.move
tests/complex/branch/: input2.fmt.move  input3.fmt.move  input4.fmt.move  input5.fmt.move
tests/complex2/: input1.fmt.move  input1.move  input2.fmt.move  input2.move  input3.fmt.move  input3.move  input4.fmt.move  input4.move  input5.fmt.move  input5.move
tests/complex3/: input1.fmt.move  input1.move  input2.fmt.move  input2.move  input3.fmt.move  input3.move  input4.fmt.move  input4.move  input5.fmt.move  input5.move  input6.fmt.move  input6.move
tests/complex4/: input1.fmt.move  input1.move  input2.fmt.move  input3.move  input4.fmt.move  input4.move  input5.fmt.move  input5.move
tests/complex5_fix_todo/: input1.fmt.move  input2.fmt.move  input2.move
tests/complex6/: input1.fmt.move  input1.move
tests/expect_escape2/: input1.move
tests/formatter/expr/: input1.fmt.move  input1.move  input1.move.fmt  input1.move.fmt.out  input2.move.fmt.out  input3.fmt.move  input3.move  input3.move.fmt  input3.move.fmt.out  input4.fmt.move  input4.move.fmt  input4.move.fmt.out  input5.fmt.move  input5.move  input5.move.fmt  input5.move.fmt.out
tests/formatter/fun/: input1.fmt.move  input1.move  input1.move.fmt  input10.fmt.move  input11.fmt.move  input2.fmt.move  input2.move  input2.move.fmt  input2.move.fmt.out  input3.fmt.move  input3.move  input3.move.fmt  input3.move.fmt.out  input4.fmt.move  input4.move  input4.move.fmt  input4.move.fmt.out  input5.fmt.move  input5.move  input5.move.fmt  input5.move.fmt.out  input6.fmt.move  input6.move  input6.move.fmt  input7.fmt.move  input8.fmt.move  input9.fmt.move
tests/formatter/lambda/: input1.move.fmt  input2.fmt.move  input2.move.fmt  input3.fmt.move  input3.move.fmt  input4.fmt.move  input4.move.fmt  input4.move.fmt.out  input5.fmt.move  input5.move  input5.move.fmt  input5.move.fmt.out  input6.fmt.move  input6.move  input7.fmt.move
tests/formatter/list/: input1.fmt.move  input1.move  input1.move.fmt  input1.move.fmt.out  input2.fmt.move  input2.move  input2.move.fmt  input2.move.fmt.out  input3.fmt.move  input3.move  input3.move.fmt  input3.move.fmt.out  input4.fmt.move  input4.move  input4.move.fmt  input4.move.fmt.out  input5.fmt.move  input5.move  input5.move.fmt  input5.move.fmt.out
tests/formatter/other/: input1.fmt.move  input2.fmt.move  input3.fmt.move
tests/formatter/spec_fun/: input1.fmt.move  (+14 more)
tests/new_syntax/: for_loop.fmt.move  receiver_style_call.fmt.move  receiver_style_call.move  receiver_style_call2.fmt.move  receiver_style_call2.move
tests/simple-project/: Move.toml
tests/todo/: input1.move  input2.move  input3.move
(+152 files in other folders)
