[package]
name = "movefmt"
version = "1.2.9"
repository = "https://github.com/movebit/movefmt"
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]  
path = "src/lib.rs"  
  
[[bin]]  
name = "movefmt"  
path = "src/bin/main.rs"  

[dependencies]
log = "0.4"
fern = "0.6"
colored = "2.0"
chrono = "0.4"
diff = "0.1"
term = "0.7"
lazy_static = "1.4.0"
regex = "1.5.5"
bisection = "0.1.0"
anyhow = "1.0.98"
codespan-reporting = "0.11.1"
lsp-types = "0.94.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
url = "2.2.2"
thiserror = "1.0.40"
walkdir = "2"
getopts = "0.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
commentfmt = { version = "1.6.0", path = "src/comment_fmt" }
rayon = "1.8"

move-command-line-common = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "4c39d3a0274b40655b589e5b6ee57b676abea149", package = "move-command-line-common" }
move-compiler = { git = "https://github.com/aptos-labs/aptos-core", rev = "4c39d3a0274b40655b589e5b6ee57b676abea149", package = "legacy-move-compiler", subdir = "third_party/move/move-compiler-v2/legacy-move-compiler"}
move-ir-types = { git = "https://github.com/aptos-labs/aptos-core.git", rev = "4c39d3a0274b40655b589e5b6ee57b676abea149", package = "move-ir-types" }

[target.'cfg(not(target_os= "windows"))'.dependencies]
pprof = { version = "0.11.0" , features = ["flamegraph" , "protobuf"]}

[profile.release]
debug = true

[features]
pprof = []
